--- a/ansible-dev/play3.yml
+++ b/ansible-dev/play3.yml
@@ -7,8 +7,8 @@
   tasks:
     - name: Download the ws package
       get_url:
-        url: "https://github.com/kserge2001/resume/archive/refs/heads/main.zip"
-        dest: "/tmp/main.zip"
+        url: "{{LINK_URL}}"
+        dest: "{{DESTINATION}}"
         
 - name: Delete file
   file:
